typecheck/tests/micro/good/if_t.c
/* A test for if_then  */

void main(void){
int i;	
i=5;
if(i!=10)
{
	i=7;
}	
return;	
	
}	
