typecheck/tests/micro/bad/argument_wrong_type.c
void apple(void)
{return;
}

void orange(int x)
{return;}

void main(void)
{
	orange(apple());
return;
}
